automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -47,7 +47,8 @@
    },
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "df = pd."
    ]
   },
   {
